Update .gitignore to exclude sensitive GCP credentials
- Added patterns to exclude service account keys
- Updated README with test line
- This prevents accidental commits of credentials

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@ vendor/
 .env.local
 .env.*.local
 
+# Google Cloud credentials
+key.json
+*service-account*.json
+gcp-credentials.json
+*-key.json
+
 # Cache and temporary files
 cache/
 tmp/
